fixed some overflow issue, adjusted background to be faster

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ html, body, #root {
 
 ::-webkit-scrollbar-track {
   border-radius: 10px;
+  opacity: 0;
 }
 
 ::-webkit-scrollbar-thumb {
